--- a/templates/page.html
+++ b/templates/page.html
@@ -33,7 +33,7 @@
 						</div>
 					</div>
 
-					{% if page.extra.toc %}
+					{% if page.toc %}
 					<hr />
 					<div class='content'>
 						<p class='has-text-weight-bold'>Table of Contents</p>
